content for sectors

--- a/cloud-and-isp/index.html
+++ b/cloud-and-isp/index.html
@@ -25,51 +25,53 @@ title: About Coreix
 				</ul>
 			</section>
 
-{% include title/default.html param="" variable-param=page.variable %}
-{% include title/default.html param="" variable-param=page.variable %}
+{% include title/default.html param="Whether you require additional backup and storage, firewall protection or need advice on upscaling your infrastructure requirements, our experienced team are on hand 24/7 to ensure that your business is operational at all times, leaving us to manage your IT operations." variable-param=page.variable %}
 
 <section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="article-single text-center">
-                    <h4>Who we are</h4>
 
-                    <p>Coreix Limited is a London based managed hosting,
-                    colocation and network services provider which offers
-                    secure, agile, scalable and robust hosting solutions to
-                    clients in varying sectors including enterprise, financial
-                    services, government and public sector as well as
-                    Insurance, wholesale, oil, bitcoin and manufacturing.</p>
+                    <p>Our experienced and qualified front line technical support team, datacentre, operations and network connectivity team are available 24/7, 365 days a year and are trained in all
+											aspects of managing the day to day operations of the colocation facilities with qualifications ranging from MCSE to CCIE. Technical support are able to offer advice on
+											backup and restoration, database optimisation, hack recovery, security auditing, virtualisation technologies as well as web hosting technologies and control panels.
+											Further to this, the company’s network engineering team monitor and manage the network from the network operations centre which is situated within our secure, robust tier III facility in Enfield.</p>
 
-                    <p>As each of our clients has a different bespoke
-                    requirement, the team at Coreix also offers tailored
-                    hardware and software solutions ranging from single
-                    dedicated servers to managed multi-server clusters, public
-                    and private cloud services, secure cages, private suites,
-                    from its energy efficient carbon neutral tier III
-                    datacentres across London to cater to their needs.</p>
+										<h4>Responsive operations team</h4>
 
-                    <h4>What we do</h4>
+                    <p>All of our network engineers are trained to at least CCIE (Cisco) or JNCIE (Juniper) standards and are able to advise and assist with any client requirement to include clustering,
+											emergency diagnostics, firewalls, load balancing, routing and switching and topology design and implementation.</p>
 
-                    <p>From our securely operated facilities in London, UK we
-                    are able to provide services ranging from a single
-                    dedicated server to managed multi-server clusters, secure
-                    cages or private suites complimented by 24/7 onsite staff
-                    and premium network bandwidth or point-to-point connections
-                    to the carrier of your choice.</p>
+										<p>Our experienced network and datacentre teams have custom designed dedicated managed hardware and software solutions in order to give peace of mind to our customers that their mission critical data
+											is being monitored 24 hours a day. At Coreix, we will work with you to ensure that you have best in class firewall, back-up, and storage solutions that suit your unique corporate requirements.</p>
 
-                    <p>With over 30 years of managed dedicated hosting
-                    experience between our management we are in a unique
-                    position to stand out from the crowd. Our company is driven
-                    by our passion and dedication to our customers needs.</p>
+                    <h4>Managed Protection Services</h4>
 
-                    <p>By offering the most comprehensive hosting solutions in
-                    the market place we are able to offer you a solution that
-                    is individually tailored to your companies needs now and in
-                    the future. Our aggressive pricing and managed services
-                    combine to allow you to take advantage of the economies of
-                    scale regardless of the size of your solution.</p>
+                    <p>At Coreix, we offer an array of managed protection services including anti-DDoS services to managed firewalls, monitoring, storage and backup solutions. At Coreix, we have a multi-tiered approach
+											to network security in order to ensure that your systems are not compromised, so that you can have peace of mind 24 x7x365.</p>
+
+                    <p>Our network is independently monitored 24x7 and has the capability to detect failures and measure performance. In collaboration with Border 6, we are able to provide you with real time updates and reports as to what is happening on the network.</p>
+
+                  	<h4>Rigorous hardware and software network uptime SLAS</h4>
+
+										<p>With an array of accreditations and standards to its name ranging from PCI DSS to ISO 270001, Coreix holds a 99.997% hardware and software Uptime SLA which ensures that your servers,
+											systems and infrastructure are being monitored at all times.</p>
+
+										<p>Our datacentre and network engineering team will provide immediate support to ensure business continuity. Through our dedicated customer portal, you are able to have a complete insight
+											into your company’s network activity and liaise directly with the technical and network support teams if you have any questions.</p>
+
+										<h4>Managed Infrastructure Services</h4>
+
+										<p>Coreix offers clients the flexibility of being able to choose if they would like either an unmanaged network attached storage platform (NAS) platform or a fully managed, encrypted, multi-site managed backup platform.
+											Our dedicated team of datacentre and network engineers can advise you as to which is the optimal solution for your business requirements.</p>
+
+										<h4>High Availability</h4>
+
+										<p>Coreix offers a range of services to enable the highest of availability for mission critical applications. A few of the most common technologies have been outlined below, they can be implemented within a single, or spanning multiple datacentres.</p>
+
+
+
                 </div>
             </div>
         </div>
