--- a/government-and-public-sector/index.html
+++ b/government-and-public-sector/index.html
@@ -25,51 +25,56 @@ title: About Coreix
 				</ul>
 			</section>
 
-{% include title/default.html param="" variable-param=page.variable %}
-{% include title/default.html param="" variable-param=page.variable %}
+{% include title/default.html param="As an established managed hosting, colocation and network services provider in the United Kingdom, Coreix Limited has been recently selected as a vendor to participate in the government’s G Cloud framework" variable-param=page.variable %}
 
 <section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="article-single text-center">
-                    <h4>Who we are</h4>
 
-                    <p>Coreix Limited is a London based managed hosting,
-                    colocation and network services provider which offers
-                    secure, agile, scalable and robust hosting solutions to
-                    clients in varying sectors including enterprise, financial
-                    services, government and public sector as well as
-                    Insurance, wholesale, oil, bitcoin and manufacturing.</p>
+                    <p>This enables it to offer an array of best in class Infrastructure as a Service (IaaS), Platform as a Service (PaaS) and other managed hosting solutions to UK government departments and those working in the public sector.
+											Coreix provides resilient and secure managed IT solutions to clients in varying sectors across EMEA and APAC.</p>
 
-                    <p>As each of our clients has a different bespoke
-                    requirement, the team at Coreix also offers tailored
-                    hardware and software solutions ranging from single
-                    dedicated servers to managed multi-server clusters, public
-                    and private cloud services, secure cages, private suites,
-                    from its energy efficient carbon neutral tier III
-                    datacentres across London to cater to their needs.</p>
+                    <p>With compliance, security and governance being a major concern for public sector departments in the UK, Coreix has achieved numerous accreditations ranging from PCI DSS to ISO 270001. The company holds a 99.997% hardware
+											and software Uptime SLA to ensure that your servers, systems and infrastructure are being monitored at all times. </p>
 
-                    <h4>What we do</h4>
+                    <h4>Secure and robust datacentre facilities</h4>
 
-                    <p>From our securely operated facilities in London, UK we
-                    are able to provide services ranging from a single
-                    dedicated server to managed multi-server clusters, secure
-                    cages or private suites complimented by 24/7 onsite staff
-                    and premium network bandwidth or point-to-point connections
-                    to the carrier of your choice.</p>
+                    <p>Throughout our datacentre portfolio, we have a stringent approach to physical and network security procedures, policies and systems in order to ensure that your infrastructure are protected in the most robust hosting
+											environment at all times. In place, we have advanced physical security measures including 3 metre high perimeter fences which are protected by NSI Gold accredited onsite security personnel and remote closed circuit television,
+											visual identity checks and processes, biometric scanners and unique access proto calls to each data halls. </p>
 
-                    <p>With over 30 years of managed dedicated hosting
-                    experience between our management we are in a unique
-                    position to stand out from the crowd. Our company is driven
-                    by our passion and dedication to our customers needs.</p>
+                    <p>With experienced onsite datacentre and network personnel on staff with qualifications ranging from MCSE to CCIE, we offer an array of managed protection services including managed firewalls,
+											infrastructure and protection services as well as monitoring, storage and backup and disaster recovery solutions ensuring that your systems are not compromised, giving you peace of mind 24x7x365.</p>
 
-                    <p>By offering the most comprehensive hosting solutions in
-                    the market place we are able to offer you a solution that
-                    is individually tailored to your companies needs now and in
-                    the future. Our aggressive pricing and managed services
-                    combine to allow you to take advantage of the economies of
-                    scale regardless of the size of your solution.</p>
+
+										<h4>Resilient and diverse network connectivity</h4>
+
+										<p>We provide complete network diversity with numerous entry points into the building and access to our robust and secure fibre metro ring which is connectivity from a host of tier 1 and tier 2 carriers including Zayo
+											 and Level 3 as well as Internet Exchange Points such as the London Internet Exchange (LINX), LONAP and the Brighton Digital Exchange (BDX).  </p>
+
+										<p>As standard, we offer Dual A & B supplies to all racks with the ability to scale rack power densities from 3kWatts to 10kWatts.</p>
+
+										<h4>Scalable, agile and flexible hosting solutions which suits your requirements</h4>
+
+										<p>Whether you are looking for colocation space or a managed cloud or disaster recovery solution, the team at Coreix will work with you to come up with a tailored plan which matches your IT strategy and budget.
+											With a vast array of managed backup, storage, firewall, load balancing and rapid sync solutions in place including dedicated servers, our team will be there to guide you through which solution works around your
+											requirements and will ensure that your department organisations scale their requirements as it needs to. </p>
+
+										<p>Our onsite team are there to ensure to maintain systems at all times and can deploy a server within four hours and answer all tickets within five minutes.
+											We have an array of hardware solutions on sites to ensure that you can deploy your solution as soon as possible to ensure that your department can concentrate with what it does best. </p>
+
+										<p>We offer N+1 redundancy for your infrastructure with our primary site served by two 8MVA incoming power suppliers offering a 100% Uptime guarantee. As standard, we also N+N UPS protection and complete</p>
+
+										<h4>Rigorous industry SLAs to ensure continuity of operations</h4>
+
+										<p>With each of our datacentres offering a 100% uptime guarantee, organisations can interact with our technical and network support team. All tickets are answered within a five minute period by our onsite technical support and network monitoring teams.
+											Coreix offers an end to end solution for government departments that look to have their servers, systems and infrastructure located in robust, secure and resilient tier III hosting solutions.</p>
+
+										<p>Our datacentre and network engineering team provide immediate support to our clients in order to ensure business continuity. Through our dedicated customer portal, clients have complete insight into their organisation’s
+											network activity and liaise directly with the technical and network support teams if you have any questions. </p>
+
                 </div>
             </div>
         </div>
