--- a/smb/index.html
+++ b/smb/index.html
@@ -25,51 +25,55 @@ title: About Coreix
 				</ul>
 			</section>
 
-{% include title/default.html param="" variable-param=page.variable %}
-{% include title/default.html param="" variable-param=page.variable %}
+{% include title/default.html param="At Coreix, we will guide you through which hosting solution works best for your IT strategy and budget. Whether you are a small start-up or an established business, our dedicated team will work with you to ensure that you have everything you need to host your online business whether it is renting a server to host your website or looking for managed backup, infrastructure, protection, storage solutions." variable-param=page.variable %}
 
 <section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="article-single text-center">
-                    <h4>Who we are</h4>
 
-                    <p>Coreix Limited is a London based managed hosting,
-                    colocation and network services provider which offers
-                    secure, agile, scalable and robust hosting solutions to
-                    clients in varying sectors including enterprise, financial
-                    services, government and public sector as well as
-                    Insurance, wholesale, oil, bitcoin and manufacturing.</p>
+                    <p>At Coreix, we offer flexible, scalable colocation, managed hosting and network solutions to match your business requirements.</p>
 
-                    <p>As each of our clients has a different bespoke
-                    requirement, the team at Coreix also offers tailored
-                    hardware and software solutions ranging from single
-                    dedicated servers to managed multi-server clusters, public
-                    and private cloud services, secure cages, private suites,
-                    from its energy efficient carbon neutral tier III
-                    datacentres across London to cater to their needs.</p>
+                    <h4>Hosting your infrastructure offsite</h4>
 
-                    <h4>What we do</h4>
+                    <p>Hosting your equipment off site offers a reassurance that your servers, systems and infrastructure are being securely protected within the confines of an industry accredited datacentre
+											on a 24x7x365 basis by an experienced team of datacentre and network engineers. As standard, we have robust physical and network security policies, procedures and processes in place to
+											ensure that your infrastructure is hosted in the most optimal hosting environment. Your online business is our priority and we ensure that your systems are operational on a 24x7x365.</p>
 
-                    <p>From our securely operated facilities in London, UK we
-                    are able to provide services ranging from a single
-                    dedicated server to managed multi-server clusters, secure
-                    cages or private suites complimented by 24/7 onsite staff
-                    and premium network bandwidth or point-to-point connections
-                    to the carrier of your choice.</p>
 
-                    <p>With over 30 years of managed dedicated hosting
-                    experience between our management we are in a unique
-                    position to stand out from the crowd. Our company is driven
-                    by our passion and dedication to our customers needs.</p>
+										<h4>Robust and secure tier III datacentre facilities to host your infrastructure</h4>
 
-                    <p>By offering the most comprehensive hosting solutions in
-                    the market place we are able to offer you a solution that
-                    is individually tailored to your companies needs now and in
-                    the future. Our aggressive pricing and managed services
-                    combine to allow you to take advantage of the economies of
-                    scale regardless of the size of your solution.</p>
+										<p>Whether you need a quarter rack or a private suite, you will have the option to scale up or down service requirements as and when you need to.
+											Each rack is powered by A+B feeds as standard with 2 N+N UPS protection as well as N+1 power redundancy giving you complete protection. Coreix offers complete network redundancy with connections to an array of
+											tier 1 and tier 2 carriers and internet exchange points via its resilient metro ring.</p>
+
+										<h4>Agility and flexibility to scale your cloud requirements</h4>
+
+										<p>Our public cloud service offers the ideal solution for SMBs looking for a scalable pay as you go hosting solution. With our easy to manage app, free firewall service,
+											free bandwidth upload backed up by a 24x7 support team and choice of operating system, businesses can have peace of mind that their organisation will never suffer from a
+											moment of downtime and be able to monitor and adjust their cloud storage as and when they need to.</p>
+
+										<h4>Dedicated server solutions onsite designed for quick deployment</h4>
+
+										<p>Coreix stocks an array of Dell servers ranging from a single 1u server with 16GB ram to multi-site solutions so that we can cater to your needs 24x7x365.
+											All servers can be ordered directly and be quickly online within a four hour period – ideal for urgent requirements. If you don't see what you need here,
+											please contact our sales team who will be happy to provide you with a quote from our full dedicated server range.</p>
+
+										<p>Whether you require a server upgrade, additional storage, or need to install a firewall, our experienced technical services team are available on a 24x7x365 basis to guide you
+											through which dedicated server solution will suit your IT strategy and budget.</p>
+
+										<p>We will work with you to deploy your hardware solutions and ensure that your server is online within a four hours so that your business can concentrate what it does best,
+											while we focus on the backend ensure that your business doesn’t experience downtime.   </p>
+
+										<h4>Responsive response team</h4>
+
+										<p>As standard, we will answer your email within a five minute period and will tailor a solution which suits your requirements.
+											We offer proactive monitoring and will notify you in real time if our systems pick up any issues with your equipment.
+											We also allow you to define an escalation procedure so if instructed to, we can immediately start work on your server if there is a problem.</p>
+
+										<p>Each member of our team will offer advice on backup and restoration, database optimisation, hack recovery, security auditing, virtualisation technologies as well as web hosting technologies and control panels. </p>
+
                 </div>
             </div>
         </div>
