--- a/gaming/index.html
+++ b/gaming/index.html
@@ -25,51 +25,54 @@ title: About Coreix
 				</ul>
 			</section>
 
-{% include title/default.html param="" variable-param=page.variable %}
-{% include title/default.html param="" variable-param=page.variable %}
+{% include title/default.html param="With the worldwide gaming industry expected to bring in $74.2 billion this year, it’s imperative for organisations operating in this sector to be able to collaborate with game console companies, cloud service providers, social networks, smart phone operators and content delivery networks with minimal latency in order to reach their target audience. Having to support different monetisation models means that organisations now have to comply with data security procedures." variable-param=page.variable %}
 
 <section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="article-single text-center">
-                    <h4>Who we are</h4>
 
-                    <p>Coreix Limited is a London based managed hosting,
-                    colocation and network services provider which offers
-                    secure, agile, scalable and robust hosting solutions to
-                    clients in varying sectors including enterprise, financial
-                    services, government and public sector as well as
-                    Insurance, wholesale, oil, bitcoin and manufacturing.</p>
 
-                    <p>As each of our clients has a different bespoke
-                    requirement, the team at Coreix also offers tailored
-                    hardware and software solutions ranging from single
-                    dedicated servers to managed multi-server clusters, public
-                    and private cloud services, secure cages, private suites,
-                    from its energy efficient carbon neutral tier III
-                    datacentres across London to cater to their needs.</p>
+                    <p>At Coreix, we have industry accredited managed hosting solutions to enable you to experience minimal downtime and ensure that your audience has an enjoyable live gaming experience while we look after backend operations.</p>
 
-                    <h4>What we do</h4>
+                    <h4>Ultra-fast low latency connectivity to reach your audience</h4>
 
-                    <p>From our securely operated facilities in London, UK we
-                    are able to provide services ranging from a single
-                    dedicated server to managed multi-server clusters, secure
-                    cages or private suites complimented by 24/7 onsite staff
-                    and premium network bandwidth or point-to-point connections
-                    to the carrier of your choice.</p>
+                    <p>Coreix enables business to be able to experience ultra-fast low latency connectivity via its robust and resilient metro fibre ring which connects to an array of tier 1, tier 2
+											carriers and Internet Exchange Points (IXPs) such as Zayo, Level 3 and LINX underpinned by 99.997% SLAs.</p>
 
-                    <p>With over 30 years of managed dedicated hosting
-                    experience between our management we are in a unique
-                    position to stand out from the crowd. Our company is driven
-                    by our passion and dedication to our customers needs.</p>
+                    <h4>Rigorous industry SLAs including PCI DSS to ensure continuity of operations</h4>
 
-                    <p>By offering the most comprehensive hosting solutions in
-                    the market place we are able to offer you a solution that
-                    is individually tailored to your companies needs now and in
-                    the future. Our aggressive pricing and managed services
-                    combine to allow you to take advantage of the economies of
-                    scale regardless of the size of your solution.</p>
+										<p>Coreix has achieved an array of SLAs to ensure that your business data is not compromised including PCI DSS and ISO 27001.</p>
+
+										<p>With each of our datacentres offering a 100% uptime guarantee, organisations can interact with our technical and network support team.
+											All tickets are answered within a five minute period by our onsite technical support and network monitoring teams.
+											Coreix offers an end to end solution for organisations operating in the financial services space that look to have their servers, systems and infrastructure located in robust, secure and resilient tier III hosting solutions.</p>
+
+										<p>Our datacentre and network engineering team provide immediate support to our clients in order to ensure business continuity.
+											Through our dedicated customer portal, clients have complete insight into their organisation’s network activity and liaise directly with the technical and network support teams if you have any questions. </p>
+
+										<h4>Scalable hardware solutions which match your corporate IT objectives</h4>
+
+										<p>At Coreix, we will collaborate with you on your unique corporate IT objectives to ensure that you are using the most resilient enterprise grade hosting solutions which work for your IT strategy and budget.
+											Whether you require a server to host a large scale database or need a fully hosted managed multi-site solution, our experienced team will work with your technical staff to ensure that you have the right infrastructure,
+											redundancy, backup and storage solutions to protect your mission critical data and applications.</p>
+
+										<h4>Bespoke colocation solutions</h4>
+
+										<p>Whether you are looking for a quarter rack or a private suite or data hall, Coreix enables businesses to be able to scale their requirements across its tier 3 datacentre portfolio which offers complete N+1 power
+											redundancy and 2 N+N UPS protection along with a diverse range of carriers to ensure that your business does not experience a moment of downtime.</p>
+
+										<h4>Dedicated private cloud solutions</h4>
+
+										<p>Our private cloud service offers the optimal solution for enterprise organisations looking for managed firewall, backup, storage, network, monitoring and support.
+											We can build a solution which matches your needs. Our team will work with you to ensure that your IT requirements are optimised through best in class support accompanied by a 24x7 support team.</p>
+
+										<h4>Tailored managed server solutions</h4>
+
+										<p>As an extension of your corporate IT team, Coreix offers an array of tailored managed server solutions including hardware redundancy, clustering, load balancing, firewall and data replication services
+											to ensure that your business does not experience a moment of downtime.</p>
+
                 </div>
             </div>
         </div>
