--- a/colocation/index.html
+++ b/colocation/index.html
@@ -28,7 +28,7 @@ The team at Coreix offers a host of tailored solutions to clients ranging from q
 			
 				<div class="image-holder col-sm-4 pull-right">
 					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="/assets/img/enfield.jpg">
+						<img alt="Slide Background" class="background-image" src="/img/enfield.jpg">
 					</div>
 				</div>
 			
