--- a/colocation/index.html
+++ b/colocation/index.html
@@ -144,7 +144,7 @@ The company also holds an array of information security (ISO 9001:2008), Informa
 			
 				<div class="image-holder col-sm-5 pull-right">
 					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="http://www.webpt.com/sites/default/files/mantrap.jpg">
+						<img alt="Slide Background" class="background-image" src="/img/colocation/P1010147.JPG">
 					</div>
 				</div>
 			
