--- a/colocation/index.html
+++ b/colocation/index.html
@@ -175,7 +175,7 @@ Our technical services are available on both on an ad-hoc and contracted basis w
 			
 				<div class="image-holder col-sm-5">
 					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="/assets/img/P1010151.JPG">
+						<img alt="Slide Background" class="background-image" src="/img/colocation/P1010139.JPG">
 					</div>
 				</div>
 			
