--- a/colocation/index.html
+++ b/colocation/index.html
@@ -213,7 +213,7 @@ Each of our sites provides an average uptime of >99.997%. To ensure power availa
 			
 				<div class="image-holder col-sm-5 pull-right">
 					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="/assets/img/P1010198.JPG">
+						<img alt="Slide Background" class="background-image" src="/img/P1010198.JPG">
 					</div>
 				</div>
 			
