--- a/dedicated-servers/index.html
+++ b/dedicated-servers/index.html
@@ -296,7 +296,7 @@ Each member of our team will offer advice on backup and restoration, database op
     <div class="image-holder col-sm-5 pull-right">
         <div class="background-image-holder"><img alt="Slide Background" class=
         "background-image" src=
-        "/assets/img/P1010151.JPG">
+        "/img/dedicated-servers/managed-services%20-Remote-hands-%20image.jpg">
         </div>
     </div>
 </section>
