--- a/about-us/testimonials/index.html
+++ b/about-us/testimonials/index.html
@@ -26,4 +26,6 @@ title: Testimonials
 			</section>
 			
 {% include navigation/about-us.html %}
+
+<!-- This is for the page title. Just change the peram= text -->
 {% include title/default.html param="Testimonials" variable-param=page.variable %}
