--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -63,7 +63,7 @@ title: Contact Us - Coreix
 
 
                 <div class="contact-method">
-                    <i class="icon pe-7s-map-marker"></i> <span>Third Floor<br>
+                    <i class="icon pe-7s-map-marker"></i> <span>Fourth Floor<br>
                     Refuge House<br>
                     9-10 River Front<br>
                     Enfield<br>
