--- a/colocation/index.html
+++ b/colocation/index.html
@@ -1,6 +1,6 @@
 ---
-layout: colocation
-title: Colocation - Coreix
+layout: colocation-and-networking
+title: Colocation & Networking - Coreix
 ---
 
 <section class="image-block">
