--- a/cloud/public-cloud/index.html
+++ b/cloud/public-cloud/index.html
@@ -2,3 +2,5 @@
 layout: public-and-private-cloud
 title: Public Cloud - Coreix
 ---
+
+{% include title/default.html param="Public Cloud" variable-param=page.variable %}
