--- a/cloud/public-cloud/index.html
+++ b/cloud/public-cloud/index.html
@@ -3,4 +3,4 @@ layout: public-and-private-cloud
 title: Public Cloud - Coreix
 ---
 
-{% include title/default.html param="Public Cloud" variable-param=page.variable %}
+{% include title/default.html title="Public Cloud" description="All about Coreix Public Cloud" variable-param=page.variable %}
