--- a/cloud/public-cloud/index.html
+++ b/cloud/public-cloud/index.html
@@ -3,9 +3,7 @@ layout: public-and-private-cloud
 title: Public Cloud - Coreix
 ---
 
-{% 
-include 
+{% include 
 title/default.html 
 title="Public Cloud" 
-variable-param=page.variable 
-%}
+variable-param=page.variable %}
