--- a/cloud/public-cloud/index.html
+++ b/cloud/public-cloud/index.html
@@ -3,7 +3,4 @@ layout: public-and-private-cloud
 title: Public Cloud - Coreix
 ---
 
-{% include 
-title/default.html 
-title="Public Cloud" 
-variable-param=page.variable %}
+{% include title/default.html title="Public Cloud" variable-param=page.variable %}
