--- a/cloud/private-cloud/index.html
+++ b/cloud/private-cloud/index.html
@@ -2,3 +2,5 @@
 layout: public-and-private-cloud
 title: Private Cloud - Coreix
 ---
+
+{% include title.html title="Private Cloud" variable-param=page.variable %}
