--- a/cloud/g-cloud/index.html
+++ b/cloud/g-cloud/index.html
@@ -2,3 +2,5 @@
 layout: public-and-private-cloud
 title: G-Cloud - Coreix
 ---
+
+{% include title.html title="G-Cloud" variable-param=page.variable %}
