--- a/cloud/public-cloud/index.html
+++ b/cloud/public-cloud/index.html
@@ -4,3 +4,10 @@ title: Public Cloud - Coreix
 ---
 
 {% include title.html title="Public Cloud" variable-param=page.variable %}
+
+{% include article/start.html %}
+
+  <h4>Title goes here</h4>
+  <p>Insert content here</p>
+
+{% include article/start.html %}
