--- a/cloud/g-cloud/index.html
+++ b/cloud/g-cloud/index.html
@@ -3,4 +3,16 @@ layout: public-and-private-cloud
 title: G-Cloud - Coreix
 ---
 
+<!-- Main page title -->
+<!-- Edit title="" for the page title -->
 {% include title.html title="G-Cloud" variable-param=page.variable %}
+
+<!-- Start page article -->
+<!-- Include <h></h> tags and <p></p> tags after {% include article/start.html %} -->
+{% include article/start.html %}
+  
+  <h4>Title goes here</h4>
+  <p>Insert content here</p>
+
+<!-- Do not include article content after {% include article/end.html %} -->
+{% include article/end.html %}
