--- a/cloud/index.html
+++ b/cloud/index.html
@@ -3,6 +3,20 @@ layout: public-and-private-cloud
 title: Public & Private Cloud - Coreix
 ---
 
+<!-- Start initial section -->
+<!-- Include <h></h> tags and <p></p> tags after {% include article/start.html %} -->
+{% include section/start.html %}
+  
+  <h1>Agile and reliable cloud solutions that scale with your business</h1>
+  <p style="padding-top: 30px; font-size: 17px;">At Coreix, our experienced technical support team will work with you to ensure that you have an agile, robust, scalable and tailored cloud solution which works for your requirements.</p>
+  <p style="font-size: 17px;">Whether you are looking for a pay as you go solution or a managed enterprise cloud option, we will ensure that you have the optimal architecture, support, firewalls, storage and traffic management services which match your IT strategy and budget.</p>
+                               
+  <a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Book a tour</a>
+  <a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Request a quote</a>
+
+<!-- Do not include initial section content after {% include article/end.html %} -->
+{% include section/end.html %}
+
 <section class="image-block">
 				<div class="container">
 					<div class="row">
