--- a/cloud/index.html
+++ b/cloud/index.html
@@ -4,7 +4,7 @@ title: Public & Private Cloud - Coreix
 ---
 
 <!-- Start initial section -->
-<!-- Include <h></h> tags and <p></p> tags after {% include article/start.html %} -->
+<!-- Include <h></h> tags and <p></p> tags after {% include section/start.html %} -->
 {% include section/start.html %}
   
   <h1>Agile and reliable cloud solutions that scale with your business</h1>
@@ -15,7 +15,7 @@ title: Public & Private Cloud - Coreix
   <a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Book a tour</a>
   <a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Request a quote</a>
 
-<!-- Do not include initial section content after {% include article/end.html %} -->
+<!-- Do not include initial section content after {% include section/end.html %} -->
 {% include section/end.html %}
 
 
