--- a/cloud/index.html
+++ b/cloud/index.html
@@ -16,7 +16,8 @@ title: Public & Private Cloud - Coreix
   <a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Request a quote</a>
 
 <!-- Do not include initial section content after {% include section/end.html %} -->
-{% include section/end.html %}
+<!-- Edit img="" to edit the right hand image -->
+{% include section/end.html image="/img/XXXX.jpg" variable-param=page.variable %}
 
 
 
