--- a/cloud/index.html
+++ b/cloud/index.html
@@ -19,53 +19,8 @@ title: Public & Private Cloud - Coreix
 <!-- To edit the right hand image edit image="" -->
 {% include section/end.html image="/img/XXXX.jpg" variable-param=page.variable %}
 
-
-
-
-<section class="fullwidth-features" style="background: #ffffff;">
-		
-				<div class="col-sm-4">
-					<div class="fullwidth-feature">
-						<div class="top" style="background: #56aadb;">
-							<i class="pe-7s-tools"></i>
-							<h5>Public Cloud</h5>
-							<div class="detail-line"></div>
-							<p>
-Our public cloud service offers the ideal solution for SMBs looking for a scalable pay as you go hosting solution. With our easy to manage app, free firewall service, free bandwidth upload backed up by a 24x7 support team and choice of operating system, businesses can have peace of mind that their organisation will never suffer from a moment of downtime and be able to monitor and adjust their cloud storage as and when they need to. 
-							</p>
-						</div>
-					</div>
-				</div>
-			
-				<div class="col-sm-4">
-					<div class="fullwidth-feature">
-						<div class="top" style="background: #66b2de">
-							<i class="pe-7s-umbrella"></i>
-							<h5>Private Cloud</h5>
-							<div class="detail-line"></div>
-							<p>
-Our private cloud service offers the optimal solution for enterprise organisations looking for managed firewall, backup, storage, network, monitoring and support. We can build a solution which matches your needs. Our team will work with you to ensure that your IT requirements are optimised through best in class support accompanied by a 24x7 support team.  
-							</p>
-						</div>
-					</div>
-				</div>
-			
-				<div class="col-sm-4">
-					<div class="fullwidth-feature">
-						<div class="top" style="background: #56aadb;">
-							<i class="pe-7s-shopbag"></i>
-							<h5>G-Cloud</h5>
-							<div class="detail-line"></div>
-							<p>
-At Coreix, we offer bespoke cloud services to match your business requirements in compliance with ISO 9001:2008. We are a member of G-Cloud, a UK Government Programme.
-							</p>
-						</div>
-					</div>
-				</div>
-		
-
-		
-			</section>
+<!-- Expanding blocks for Public, Private and G-Cloud -->
+{% include cloud/blocks.html %}
 
 
 
