--- a/cloud/g-cloud/index.html
+++ b/cloud/g-cloud/index.html
@@ -8,10 +8,8 @@ title: G-Cloud - Coreix
 {% include title.html title="G-Cloud" variable-param=page.variable %}
 
 <!-- Start page article -->
-<!-- Include <h></h> tags and <p></p> tags after {% include article/start.html %} -->
-{% include article/start.html %}
-  
-  <h4>Title goes here</h4>
+<!-- Include <p></p> tags after {% include article/start.html %}. Edit article title using title= -->
+{% include article/start.html title="Title goes here" variable-param=page.variable %}
   
   <p>Insert content here</p>
 
