--- a/cloud/index.html
+++ b/cloud/index.html
@@ -4,10 +4,8 @@ title: Public & Private Cloud - Coreix
 ---
 
 <!-- Start initial section -->
-<!-- Include <h></h> tags and <p></p> tags after {% include section/start.html %} -->
-{% include section/start.html %}
-  
-  <h1>Agile and reliable cloud solutions that scale with your business</h1>
+<!-- Include <p></p> tags after {% include section/start.html %}. Edit title using title="" -->
+{% include section/start.html title="Agile and reliable cloud solutions that scale with your business" variable-param=page.variable %}
   
   <p style="padding-top: 30px; font-size: 17px;">At Coreix, our experienced technical support team will work with you to ensure that you have an agile, robust, scalable and tailored cloud solution which works for your requirements.</p>
   <p style="font-size: 17px;">Whether you are looking for a pay as you go solution or a managed enterprise cloud option, we will ensure that you have the optimal architecture, support, firewalls, storage and traffic management services which match your IT strategy and budget.</p>
