--- a/cloud/index.html
+++ b/cloud/index.html
@@ -40,6 +40,20 @@ title: Public & Private Cloud - Coreix
 
 
 
+<!-- Image (on the right) feature block with text -->
+<!-- Include <p></p> tags after {% include image-block/right/start.html %}. Edit title using title="" -->
+{% include image-block/right/start.html title="Robust resilient energy efficient premium datacentre facilities" variable-param=page.variable %}
+  
+  <p class="lead">Coreix offers energy efficient premium colocation services from its enterprise grade datacentre facilities which are all situated within the M25.</p> 
+  <p class="lead">The team at Coreix offers a host of tailored solutions to clients ranging from quarter cabs to dedicated private suites from its enterprise grade secure and robust tier III datacentre facilities within the M25 in London. Coreix provides the ultimate hosting environment for mission critical IT services with its numerous stringent physical and network security accreditations, policies and procedures including PCI DSS and ISO: 27001 which are followed to ensure that your business does not experience a moment of downtime.</p>
+  
+  <a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Contact a Coreix specialist</a>
+
+<!-- Do not include initial section content after {% include image-block/right/end.html %} -->
+<!-- To edit the right hand image edit image="" -->
+{% include image-block/right/end.html image="http://www.webpt.com/sites/default/files/mantrap.jpg" variable-param=page.variable %}
+
+
 
 <section class="image-block">
 				<div class="container">
