--- a/cloud/index.html
+++ b/cloud/index.html
@@ -49,7 +49,7 @@ title: Public & Private Cloud - Coreix
   
   <a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Contact a Coreix specialist</a>
 
-<!-- Do not include initial section content after {% include image-block/right/end.html %} -->
+<!-- Do not include any more feature text after here {% include image-block/right/end.html %} -->
 <!-- To edit the right hand image edit image="" -->
 {% include image-block/right/end.html image="http://www.webpt.com/sites/default/files/mantrap.jpg" variable-param=page.variable %}
 
