--- a/cloud/index.html
+++ b/cloud/index.html
@@ -21,7 +21,7 @@ title: Public & Private Cloud - Coreix
 {% include cloud/blocks.html %}
 
 <!-- Large page break title. To modify the title edit title="" -->
-{% include section/end.html title="Agile, scalable and reliable cloud solutions to suit your business requirements" variable-param=page.variable %}
+{% include large-title.html title="Agile, scalable and reliable cloud solutions to suit your business requirements" variable-param=page.variable %}
 
 <!-- Image (on the right) feature block with text -->
 <!-- Include <p></p> tags after {% include image-block/right/start.html %}. Edit title using title="" -->
