--- a/managed-services/resilient-security/index.html
+++ b/managed-services/resilient-security/index.html
@@ -1,1 +1,17 @@
+---
+layout: managed-services
+title: Private Cloud - Coreix
+---
 
+<!-- Main page title -->
+<!-- Edit title="" for the page title -->
+{% include title.html title="Resilient Security" variable-param=page.variable %}
+
+<!-- Start page article -->
+<!-- Include <p></p> tags after {% include article/start.html %}. Edit article title using title= -->
+{% include article/start.html title="Title goes here" variable-param=page.variable %}
+  
+  <p>Insert content here</p>
+
+<!-- Do not include article content after {% include article/end.html %} -->
+{% include article/end.html %}
