--- a/colocation/index.html
+++ b/colocation/index.html
@@ -18,7 +18,7 @@ title: Colocation & Networking - Coreix
 {% include section/end.html image="/img/enfield.jpg" variable-param=page.variable %}
 
 <!-- Expanding blocks for Colocation -->
-{% include cloud/colocation.html %}
+{% include colocation/blocks.html %}
 
 
 
