--- a/colocation/index.html
+++ b/colocation/index.html
@@ -20,6 +20,8 @@ title: Colocation & Networking - Coreix
 <!-- Expanding blocks for Colocation -->
 {% include colocation/blocks.html %}
 
+<!-- Large page break title. To modify the title edit title="" -->
+{% include large-title.html title="Robust, resilient tier III enterprise grade facilities for your mission critical IT infrastructure" variable-param=page.variable %}
 
 
 
@@ -30,17 +32,6 @@ title: Colocation & Networking - Coreix
 
 
 
-<section class="large-pad">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-10 col-md-offset-1 col-sm-12 text-center">
-							<h1 style="font-size: 40px;">
-			Robust, resilient tier III enterprise grade facilities for your mission critical IT infrastructure
-							</h1>
-						</div>
-					</div>
-				</div>
-			</section>
 
 
 
