--- a/colocation/index.html
+++ b/colocation/index.html
@@ -23,286 +23,42 @@ title: Colocation & Networking - Coreix
 <!-- Large page break title. To modify the title edit title="" -->
 {% include large-title.html title="Robust, resilient tier III enterprise grade facilities for your mission critical IT infrastructure" variable-param=page.variable %}
 
+<!-- Image (on the right) feature block with text -->
+<!-- Include <p></p> tags after {% include image-block/right/start.html %}. Edit title using title="" -->
+{% include image-block/right/start.html title="As your servers, systems and infrastructure are our priority, Coreix takes a multi-tiered approach to both its physical and network security policies, procedures and screening processes." variable-param=page.variable %}
 
+  <p class="lead">The company also holds an array of information security (ISO 9001:2008), Information Security Management (ISO:27001:2005), PCI DSS, Environmental Management, Information Governance and Employment Screening accreditations in order to give you as a customer peace of mind that your systems and infrastructure are in safe hands.</p>
 
+	<a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Contact a Coreix specialist</a>
 
+<!-- Do not include any more feature text after here {% include image-block/right/end.html %} -->
+<!-- To edit the right hand image edit image="" -->
+{% include image-block/right/end.html image="/img/colocation/P1010147.JPG" variable-param=page.variable %}
 
+<!-- Image (on the left) feature block with text -->
+<!-- Include <p></p> tags after {% include image-block/right/start.html %}. Edit title using title="" -->
+{% include image-block/left/start.html title="On-site experienced operations team available 24x7x365." variable-param=page.variable %}
 
+  <p class="lead">Our technical services are available on both on an ad-hoc and contracted basis with a five minute first response SLA as standard. This service is available on a 24x7x365 basis which provides customers with the reassurance that their equipment is being stored in the ultimate mission critical hosting environment.</p>
 
+	<a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Find out more</a>
+  <a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Contact a Coreix specialist</a>
 
+<!-- Do not include any more feature text after here {% include image-block/right/end.html %} -->
+<!-- To edit the right hand image edit image="" -->
+{% include image-block/left/end.html image="/img/colocation/P1010139.JPG" variable-param=page.variable %}
 
+<!-- Image (on the right) feature block with text -->
+<!-- Include <p></p> tags after {% include image-block/right/start.html %}. Edit title using title="" -->
+{% include image-block/right/start.html title="N+1 power redundancy, multiple resilient HV diesel generators and N+N UPS protection across our data centre portfolio." variable-param=page.variable %}
 
+  <p class="lead">Each of our sites provides an average uptime of >99.997%. To ensure power availability, our facilities provide a minimum of N+1 power redundancy, which means that your mission critical applications, infrastructure and systems have at least one backup power feed that will kick in in the unlikely event of an outage.</p>
+  <p class="lead">As standard, your rack power is reserved on two independent UPS strings in the primary datacentre for complete redundancy.</p>
+  <p class="lead">Our datacentres have an on-site, private substation fed diversely so that we’re not reliant on a single mains supply to power our hosting facilities. A+B xxAMP rated circuts are standard with a minimum of UPS power protection.</p>
 
+  <a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Find out more</a>
+  <a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Contact a Coreix specialist</a>
 
-
-
-<section class="image-block">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-6">
-							<div class="text-block">
-								<h3 style="color: #769259;">As your servers, systems and infrastructure are our priority, Coreix takes a multi-tiered approach to both its physical and network security policies, procedures and screening processes.</h3>
-
-                                    <p class="lead">
-The company also holds an array of information security (ISO 9001:2008), Information Security Management (ISO:27001:2005), PCI DSS, Environmental Management, Information Governance and Employment Screening accreditations in order to give you as a customer peace of mind that your systems and infrastructure are in safe hands.
-								</p>
-								<a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Contact a Coreix specialist</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="image-holder col-sm-5 pull-right">
-					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="/img/colocation/P1010147.JPG">
-					</div>
-				</div>
-
-			</section>
-
-
-
-
-<section class="image-block">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-6 pull-right">
-							<div class="text-block">
-								<h3 style="color: #769259;">
-                                On-site experienced operations team available 24x7x365.
-                                </h3>
-
-                                    <p class="lead">
-Our technical services are available on both on an ad-hoc and contracted basis with a five minute first response SLA as standard. This service is available on a 24x7x365 basis which provides customers with the reassurance that their equipment is being stored in the ultimate mission critical hosting environment.
-								</p>
-                                 <a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Find out more</a>
-								<a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Contact a Coreix specialist</a>
-
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="image-holder col-sm-5">
-					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="/img/colocation/P1010139.JPG">
-					</div>
-				</div>
-
-			</section>
-
-
-
-<section class="image-block">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-6">
-							<div class="text-block">
-								<h3 style="color: #769259;">
-                                N+1 power redundancy, multiple resilient HV diesel generators and N+N UPS protection across our data centre portfolio.
-                                </h3>
-
-                                    <p class="lead">
-Each of our sites provides an average uptime of >99.997%. To ensure power availability, our facilities provide a minimum of N+1 power redundancy, which means that your mission critical applications, infrastructure and systems have at least one backup power feed that will kick in in the unlikely event of an outage.
-								</p>
-
-                                  <p class="lead">
-                                  As standard, your rack power is reserved on two independent UPS strings in the primary datacentre for complete redundancy.
-                                  </p>
-                                  <p class="lead">
-                                  Our datacentres have an on-site, private substation fed diversely so that we’re not reliant on a single mains supply to power our hosting facilities. A+B xxAMP rated circuts are standard with a minimum of UPS power protection.
-                                  </p>
-
-
-                                <a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Find out more</a>
-								<a class="btn" href="#" style="color: #769259; border-color: #769259; padding: 10px;">Contact a Coreix specialist</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="image-holder col-sm-5 pull-right">
-					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="/img/P1010198.JPG">
-					</div>
-				</div>
-
-			</section>
-
-
-
-
-
-<section style="background: #769259">
-				<div class="container">
-					<div class="row">
-					<div class="col-md-4 col-sm-6">
-						<div class="text-block">
-							<div class="detail-line"></div>
-							<h5>Project Planner</h5>
-							<h4>Tell us a little about your idea</h4>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-md-10 col-md-offset-1">
-							<form class="project-planner">
-								<h5>My project involves:</h5>
-								<div class="options">
-									<div class="planner-option">
-										<span>Web Development</span>
-										<i class="pe-7s-check"></i>
-										<input class="validate-required" type="checkbox" name="service[]" value="">
-									</div>
-
-									<div class="planner-option">
-										<span>SEO Management</span>
-										<i class="pe-7s-check"></i>
-										<input type="checkbox" name="service[]" value="">
-									</div>
-
-									<div class="planner-option">
-										<span>Copywriting</span>
-										<i class="pe-7s-check"></i>
-										<input type="checkbox" name="service[]" value="">
-									</div>
-
-									<div class="planner-option">
-										<span>Photography</span>
-										<i class="pe-7s-check"></i>
-										<input type="checkbox" name="service[]" value="">
-									</div>
-
-									<div class="planner-option">
-										<span>Copywriting</span>
-										<i class="pe-7s-check"></i>
-										<input type="checkbox" name="service[]" value="">
-									</div>
-
-									<div class="planner-option">
-										<span>Photography</span>
-										<i class="pe-7s-check"></i>
-										<input type="checkbox" name="service[]" value="">
-									</div>
-								</div>
-
-								<hr>
-
-								<div class="col-sm-6">
-									<div class="radio-group">
-										<span class="title">My estimated timeframe is around</span>
-										<div class="planner-radio">
-											<div class="mock-radio">
-												<div class="radio-outer">
-													<div class="radio-inner"></div>
-												</div>
-											</div>
-											<span>4 Weeks</span>
-											<input type="radio" name="timeframe" value="4 Weeks">
-										</div>
-
-										<div class="planner-radio">
-											<div class="mock-radio active">
-												<div class="radio-outer">
-													<div class="radio-inner"></div>
-												</div>
-											</div>
-											<span>8 Weeks</span>
-											<input type="radio" name="timeframe" value="8 Weeks" checked="checked">
-										</div>
-
-										<div class="planner-radio">
-											<div class="mock-radio">
-												<div class="radio-outer">
-													<div class="radio-inner"></div>
-												</div>
-											</div>
-											<span>12 Weeks</span>
-											<input type="radio" name="timeframe" value="12 Weeks">
-										</div>
-
-										<div class="planner-radio">
-											<div class="mock-radio">
-												<div class="radio-outer">
-													<div class="radio-inner"></div>
-												</div>
-											</div>
-											<span>18 Weeks</span>
-											<input type="radio" name="timeframe" value="18 Weeks">
-										</div>
-									</div>
-								</div>
-
-								<div class="col-sm-6">
-									<div class="radio-group">
-										<span class="title">My estimated budget is around</span>
-										<div class="planner-radio">
-											<div class="mock-radio">
-												<div class="radio-outer">
-													<div class="radio-inner"></div>
-												</div>
-											</div>
-											<span>$2,000</span>
-											<input type="radio" name="budget" value="$2,000">
-										</div>
-
-										<div class="planner-radio">
-											<div class="mock-radio active">
-												<div class="radio-outer">
-													<div class="radio-inner"></div>
-												</div>
-											</div>
-											<span>$4,000</span>
-											<input type="radio" name="budget" value="$4,000" checked="checked">
-										</div>
-
-										<div class="planner-radio">
-											<div class="mock-radio">
-												<div class="radio-outer">
-													<div class="radio-inner"></div>
-												</div>
-											</div>
-											<span>$8,000</span>
-											<input type="radio" name="budget" value="$8,000">
-										</div>
-
-										<div class="planner-radio">
-											<div class="mock-radio">
-												<div class="radio-outer">
-													<div class="radio-inner"></div>
-												</div>
-											</div>
-											<span>$10,000</span>
-											<input type="radio" name="budget" value="$10,000">
-										</div>
-									</div>
-								</div>
-
-								<hr>
-
-								<div class="col-sm-12">
-									<input class="input-standard validate-required" type="text" name="name" placeholder="Your Name">
-									<input class="input-standard validate-required validate-email" type="text" name="email" placeholder="Email Address">
-									<input class="input-standard" type="text" name="note" placeholder="Note / Relevant URL">
-								</div>
-
-								<hr>
-
-								<div class="col-sm-12 text-center">
-									<input type="submit" class="btn" value="Submit Planner">
-								</div>
-
-								<div class="form-success">
-									<span class="text-white">Message sent - Thanks for your enquiry</span>
-								</div>
-								<div class="form-error">
-									<span class="text-white">Please complete all fields correctly</span>
-								</div>
-
-							</form>
-						</div>
-					</div>
-
-				</div>
-			</section>
+<!-- Do not include any more feature text after here {% include image-block/right/end.html %} -->
+<!-- To edit the right hand image edit image="" -->
+{% include image-block/right/end.html image="/img/P1010198.JPG" variable-param=page.variable %}
